# solidity-fcg-tool

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_zh.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
samples/: SimpleToken.sol
solidity_fcg_tool/: __init__.py  __main__.py  cli.py
solidity_fcg_tool/core/: __init__.py  engine_base.py  models.py
solidity_fcg_tool/engines/: __init__.py  registry.py  slither_engine.py
solidity_fcg_tool/services/: query.py
tests/: test_query_service.py
